--- a/boss.ini
+++ b/boss.ini
@@ -304,3 +304,33 @@ gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 지금부터 1시간 이라개 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+
+bossname = 보나딘
+gentime = 24:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 미톤으로 이라개 !
+alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+
+bossname = 루트미온
+gentime = 24:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 미톤으로 이라개 !
+alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+
+bossname = 데바릭
+gentime = 24:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 미톤으로 이라개 !
+alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+
+bossname = 게르모
+gentime = 24:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 미톤으로 이라개 !
+alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+
+bossname = 바니아스
+gentime = 24:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 미톤으로 이라개 !
+alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
