--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
-voicechannel = 757218674254938112
-textchannel = 757222708902887445
+voicechannel = 
+textchannel = 
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
@@ -9,8 +9,9 @@ racingchannel =
 itemchannel = 
 
 before_alert = 1
-before_alert1 = 3
-mungChk = 10
+before_alert1 = 5
+mungChk1 = 10
+mungChk2 = 10
 delmungcnt = 20
 
 bossInfoNum = 3
