--- a/boss.ini
+++ b/boss.ini
@@ -4,333 +4,389 @@ gentime = 23:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 기만이라개 !
 alert_ment = 뜹니다 ! 녹는다 녹아 ! 멍멍! 
+mungtime = 1
 
 bossname = 볼피
 gentime = 23:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 기만이라개 !
 alert_ment = 뜹니다 ! 녹는다 녹아 ! 멍멍! 
+mungtime = 1
 
 bossname = 팬서
 gentime = 23:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 기만이라개 !
 alert_ment = 뜹니다 ! 녹는다 녹아 ! 멍멍! 
+mungtime = 1
 
 bossname = 오르카
 gentime = 23:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 기만이라개 !
 alert_ment = 뜹니다 ! 녹는다 녹아 ! 멍멍! 
+mungtime = 1
 
 bossname = 바눌린
 gentime = 20:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 톨란으로 오라개 !
 alert_ment = 뜹니다 ! 녹는다 녹아 ! 멍멍! 
+mungtime = 1
 
 bossname = 파스빌
 gentime = 20:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 톨란으로 오라개 !
 alert_ment = 뜹니다 ! 녹는다 녹아 ! 멍멍! 
+mungtime = 1
 
 bossname = 세티벨
 gentime = 20:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 톨란으로 오라개 !
 alert_ment = 뜹니다 ! 녹는다 녹아 ! 멍멍! 
+mungtime = 1
 
 bossname = 델락
 gentime = 20:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 톨란으로 오라개 !
 alert_ment = 뜹니다 ! 녹는다 녹아 ! 멍멍! 
+mungtime = 1
 
 bossname = 프래머
 gentime = 20:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 헤렌디아로 오라개 !
 alert_ment = 뜹니다 ! 사르르 녹는다개 ! 멍멍! 
+mungtime = 1
 
 bossname = 다지안
 gentime = 20:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 헤렌디아로 오라개 !
 alert_ment = 뜹니다 ! 사르르 녹는다개 ! 멍멍! 
+mungtime = 1
 
 bossname = 파라크
 gentime = 20:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 헤렌디아로 오라개 !
 alert_ment = 뜹니다 ! 사르르 녹는다개 ! 멍멍! 
+mungtime = 1
 
 bossname = 보르트
 gentime = 20:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 헤렌디아로 오라개 !
 alert_ment = 뜹니다 ! 사르르 녹는다개 ! 멍멍! 
+mungtime = 1
 
 bossname = 테라핌
 gentime = 22:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 좌절로 오라개 !
 alert_ment = 뜹니다 ! 순삭이라개 ! 멍멍! 
+mungtime = 1
 
 bossname = 셀피나
 gentime = 22:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 좌절로 오라개 !
 alert_ment = 뜹니다 ! 순삭이라개 ! 멍멍! 
+mungtime = 1
 
 bossname = 키리코
 gentime = 22:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 좌절로 오라개 !
 alert_ment = 뜹니다 ! 순삭이라개 ! 멍멍! 
+mungtime = 1
 
 bossname = 베딘
 gentime = 08:10
 nogencheck = 0
 before_alert_ment = 입니다 ! 사투로 오라개 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+mungtime = 1
 
 bossname = 탄파나
 gentime = 24:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 멘탈붕괴 !
 alert_ment = 뜹니다 ! 탄파나 녹는다개 ! 멍멍! 
+mungtime = 1
 
 bossname = 스노트라
 gentime = 24:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 멘탈붕괴 !
 alert_ment = 뜹니다 ! 스노트라 슬롯준다개 ! 멍멍! 
+mungtime = 1
 
 bossname = 이둔
 gentime = 24:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 멘탈붕괴 !
 alert_ment = 뜹니다 ! 이둔 녹는다개 ! 멍멍! 
+mungtime = 1
 
 bossname = 두크라스
 gentime = 21:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 오만으로 오라개 !
 alert_ment = 뜹니다 ! 순삭이라개 ! 멍멍! 
+mungtime = 1
 
 bossname = 지프나크
 gentime = 21:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 오만으로 오라개 !
 alert_ment = 뜹니다 ! 순삭이라개 ! 멍멍! 
+mungtime = 1
 
 bossname = 카타스랄
 gentime = 21:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 오만으로 오라개 !
 alert_ment = 뜹니다 ! 순삭이라개 ! 멍멍! 
+mungtime = 1
 
 bossname = 반디아스
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 승패라개 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+mungtime = 1
 
 bossname = 카비라스
 gentime = 24:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 승패라개 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+mungtime = 1
 
 bossname = 키알
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 천공이라개 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+mungtime = 1
 
 bossname = 티알피
 gentime = 48:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 망각으로 오라개 !
 alert_ment = 뜹니다 ! 엘튼 주라개 ! 멍멍! 
+mungtime = 1
 
 bossname = 에다
 gentime = 48:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 망각으로 오라개 !
 alert_ment = 뜹니다 ! 엘튼 주라개 ! 멍멍! 
+mungtime = 1
 
 bossname = 키르니르
 gentime = 48:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 망각으로 오라개 !
 alert_ment = 뜹니다 ! 엘튼 주라개 ! 멍멍! 
+mungtime = 1
 
 bossname = 로코
 gentime = 00:01
 nogencheck = 0
 before_alert_ment = 입니다.
 alert_ment = 멍 멍 
+mungtime = 1
 
 bossname = 바눌린2
 gentime = 20:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 톨란2채널로 오라개 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+mungtime = 1
 
 bossname = 파스빌2
 gentime = 20:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 톨란2채널로 오라개 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+mungtime = 1
 
 bossname = 세티벨2
 gentime = 20:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 톨란2채널로 오라개 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+mungtime = 1
 
 bossname = 델락2
 gentime = 20:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 톨란2채널로 오라개 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+mungtime = 1
 
 bossname = 프래머2
 gentime = 20:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 헤렌디아2채널로 오라개 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+mungtime = 1
 
 bossname = 다지안2
 gentime = 20:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 헤렌디아2채널로 오라개 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+mungtime = 1
 
 bossname = 파라크2
 gentime = 20:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 헤렌디아2채널로 오라개 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+mungtime = 1
 
 bossname = 보르트2
 gentime = 20:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 헤렌디아2채널로 오라개 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+mungtime = 1
 
 bossname = 붕괴1
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 띵 보라개 !
 alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍! 
+mungtime = 1
 
 bossname = 붕괴2
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 띵 보라개 !
 alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍! 
+mungtime = 1
 
 bossname = 붕괴3
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 띵 보라개 !
 alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍! 
+mungtime = 1
 
 bossname = 붕괴4
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 띵 보라개 !
 alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍!
+mungtime = 1
 
 bossname = 망각1
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 띵 보라개 !
 alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍!
+mungtime = 1
 
 bossname = 망각2
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 띵 보라개 !
 alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍!
+mungtime = 1
 
 bossname = 망각3
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 띵 보라개 !
 alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍!
+mungtime = 1
 
 bossname = 망각4
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 띵 보라개 !
 alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍!
+mungtime = 1
 
 bossname = 망각5
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 띵 보라개 !
 alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍!
+mungtime = 1
 
 bossname = 망각6
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 띵 보라개 !
 alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍!
+mungtime = 1
 
 bossname = 망각7
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 띵 보라개 !
 alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍!
+mungtime = 1
 
 bossname = 망각8
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 띵 보라개 !
 alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍! 
+mungtime = 1
 
 bossname = 망각9
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 띵 보라개 !
 alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍! 
+mungtime = 1
 
 bossname = 망각10
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 띵 보라개 !
 alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍! 
+mungtime = 1
 
 bossname = 보나딘
 gentime = 24:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 미톤 초원이 다리는 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+mungtime = 1
 
 bossname = 루트미온
 gentime = 24:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 미톤 초원이 다리는 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+mungtime = 1
 
 bossname = 데바릭
 gentime = 24:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 미톤 초원이 다리는 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+mungtime = 1
 
 bossname = 게르모
 gentime = 24:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 미톤 초원이 다리는 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+mungtime = 1
 
 bossname = 바니아스
 gentime = 24:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 미톤 초원이 다리는 ! 백만불짜리 다리 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+mungtime = 1
