--- a/boss.ini
+++ b/boss.ini
@@ -359,34 +359,34 @@ mungtime = 1
 bossname = 보나딘
 gentime = 24:00
 nogencheck = 0
-before_alert_ment = 입니다 ! 미톤 초원이 다리는 !
+before_alert_ment = 입니다 ! 미톤 이라개 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
 mungtime = 1
 
 bossname = 루트미온
 gentime = 24:00
 nogencheck = 0
-before_alert_ment = 입니다 ! 미톤 초원이 다리는 !
+before_alert_ment = 입니다 ! 미톤 이라개 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
 mungtime = 1
 
 bossname = 데바릭
 gentime = 24:00
 nogencheck = 0
-before_alert_ment = 입니다 ! 미톤 초원이 다리는 !
+before_alert_ment = 입니다 ! 미톤 이라개 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
 mungtime = 1
 
 bossname = 게르모
 gentime = 24:00
 nogencheck = 0
-before_alert_ment = 입니다 ! 미톤 초원이 다리는 !
+before_alert_ment = 입니다 ! 미톤 이라개 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
 mungtime = 1
 
 bossname = 바니아스
 gentime = 24:00
 nogencheck = 0
-before_alert_ment = 입니다 ! 미톤 초원이 다리는 ! 백만불짜리 다리 !
+before_alert_ment = 입니다 ! 미톤 이라개 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
 mungtime = 1
