--- a/boss.ini
+++ b/boss.ini
@@ -390,3 +390,94 @@ nogencheck = 0
 before_alert_ment = 입니다 ! 미톤 이라개 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
 mungtime = 1
+
+bossname = 위선1
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 띵 보라개 !
+alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍!
+mungtime = 1
+
+bossname = 위선2
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 띵 보라개 !
+alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍!
+mungtime = 1
+
+bossname = 위선3
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 띵 보라개 !
+alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍!
+mungtime = 1
+
+bossname = 위선4
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 띵 보라개 !
+alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍!
+mungtime = 1
+
+bossname = 위선5
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 띵 보라개 !
+alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍!
+mungtime = 1
+
+bossname = 위선6
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 띵 보라개 !
+alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍!
+mungtime = 1
+
+bossname = 위선7
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 띵 보라개 !
+alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍!
+mungtime = 1
+
+bossname = 위선8
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 띵 보라개 !
+alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍!
+mungtime = 1
+
+bossname = 위선9
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 띵 보라개 !
+alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍!
+mungtime = 1
+
+bossname = 위선10
+gentime = 14:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 띵 보라개 !
+alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍!
+mungtime = 1
+
+bossname = 케바린
+gentime = 48:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 띵 보라개 !
+alert_ment = 개아파여 진짜루 유유  멍멍
+mungtime = 1
+
+bossname = 갈루몬드
+gentime = 48:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 띵 보라개 !
+alert_ment = 개아파여 진짜루 유유  멍멍
+mungtime = 1
+
+bossname = 코드
+gentime = 48:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 띵 보라개 !
+alert_ment = 개아파여 진짜루 유유  멍멍
+mungtime = 1
