--- a/boss.ini
+++ b/boss.ini
@@ -481,3 +481,31 @@ nogencheck = 0
 before_alert_ment = 입니다 ! 띵 보라개 !
 alert_ment = 개아파여 진짜루 유유  멍멍
 mungtime = 1
+
+bossname = 1기셀라
+gentime = 23:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 기만이라개 !
+alert_ment = 뜹니다 ! 녹는다 녹아 ! 멍멍! 
+mungtime = 1
+
+bossname = 1볼피
+gentime = 23:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 기만이라개 !
+alert_ment = 뜹니다 ! 녹는다 녹아 ! 멍멍! 
+mungtime = 1
+
+bossname = 1팬서
+gentime = 23:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 기만이라개 !
+alert_ment = 뜹니다 ! 녹는다 녹아 ! 멍멍! 
+mungtime = 1
+
+bossname = 1오르카
+gentime = 23:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 기만이라개 !
+alert_ment = 뜹니다 ! 녹는다 녹아 ! 멍멍! 
+mungtime = 1
