--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 786788624569991208
 textchannel = 786787018188521584
 ladderchannel = 
 jungsanchannel = 
