--- a/boss.ini
+++ b/boss.ini
@@ -509,3 +509,24 @@ nogencheck = 0
 before_alert_ment = 입니다 ! 기만이라개 !
 alert_ment = 뜹니다 ! 녹는다 녹아 ! 멍멍! 
 mungtime = 1
+
+bossname = 칼리바
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 띵 보라개 !
+alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍! 
+mungtime = 1
+
+bossname = 린드르
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 띵 보라개 !
+alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍! 
+mungtime = 1
+
+bossname = 라우디
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 띵 보라개 !
+alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍! 
+mungtime = 1
