--- a/boss.ini
+++ b/boss.ini
@@ -530,3 +530,31 @@ nogencheck = 0
 before_alert_ment = 입니다 ! 띵 보라개 !
 alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍! 
 mungtime = 1
+
+bossname = 보나딘2
+gentime = 24:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 미톤 이라개 !
+alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+mungtime = 1
+
+bossname = 루트미온2
+gentime = 24:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 미톤 이라개 !
+alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+mungtime = 1
+
+bossname = 데바릭2
+gentime = 24:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 미톤 이라개 !
+alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+mungtime = 1
+
+bossname = 게르모2
+gentime = 24:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 미톤 이라개 !
+alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+mungtime = 1
