--- a/boss.ini
+++ b/boss.ini
@@ -558,3 +558,10 @@ nogencheck = 0
 before_alert_ment = 입니다 ! 미톤 이라개 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
 mungtime = 1
+
+bossname = 바니아스2
+gentime = 24:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 미톤 이라개 !
+alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
+mungtime = 1
