--- a/boss.ini
+++ b/boss.ini
@@ -1,4 +1,4 @@
-﻿-----일반보스-----
+﻿﻿-----일반보스-----
 bossname = 기셀라
 gentime = 23:00
 nogencheck = 0
@@ -258,34 +258,6 @@ before_alert_ment = 입니다 ! 헤렌디아2채널로 오라개 !
 alert_ment = 뜹니다 ! 빨리 오세요 ! 멍멍! 
 mungtime = 1
 
-bossname = 붕괴1
-gentime = 12:00
-nogencheck = 0
-before_alert_ment = 입니다 ! 띵 보라개 !
-alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍! 
-mungtime = 1
-
-bossname = 붕괴2
-gentime = 12:00
-nogencheck = 0
-before_alert_ment = 입니다 ! 띵 보라개 !
-alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍! 
-mungtime = 1
-
-bossname = 붕괴3
-gentime = 12:00
-nogencheck = 0
-before_alert_ment = 입니다 ! 띵 보라개 !
-alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍! 
-mungtime = 1
-
-bossname = 붕괴4
-gentime = 12:00
-nogencheck = 0
-before_alert_ment = 입니다 ! 띵 보라개 !
-alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍!
-mungtime = 1
-
 bossname = 망각1
 gentime = 12:00
 nogencheck = 0
@@ -510,21 +482,63 @@ before_alert_ment = 입니다 ! 기만이라개 !
 alert_ment = 뜹니다 ! 녹는다 녹아 ! 멍멍! 
 mungtime = 1
 
-bossname = 칼리바
+bossname = 칼리바1
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 띵 보라개 !
 alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍! 
 mungtime = 1
 
-bossname = 린드르
+bossname = 칼리바2
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 띵 보라개 !
 alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍! 
 mungtime = 1
 
-bossname = 라우디
+bossname = 칼리바3
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 띵 보라개 !
+alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍! 
+mungtime = 1
+
+bossname = 린드르1
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 띵 보라개 !
+alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍! 
+mungtime = 1
+
+bossname = 린드르2
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 띵 보라개 !
+alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍! 
+mungtime = 1
+
+bossname = 린드르3
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 띵 보라개 !
+alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍! 
+mungtime = 1
+
+bossname = 라우디1
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 띵 보라개 !
+alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍! 
+mungtime = 1
+
+bossname = 라우디2
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다 ! 띵 보라개 !
+alert_ment = 뜹니다 ! 지금부터 1시간 이라개 ! 멍멍! 
+mungtime = 1
+
+bossname = 라우디3
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다 ! 띵 보라개 !
