--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
-voicechannel = 786788624569991208
-textchannel = 786787018188521584
+voicechannel = 
+textchannel = 
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
@@ -9,7 +9,7 @@ racingchannel =
 itemchannel = 
 
 before_alert = 1
-before_alert1 = 3
+before_alert1 = 5
 mungChk1 = 10
 mungChk2 = 10
 delmungcnt = 20
